[gd_scene load_steps=47 format=3 uid="uid://dr1q71nbgxbl4"]

[ext_resource type="Script" path="res://Scenes/Entities/EnemyBasic.gd" id="1_uycs0"]
[ext_resource type="Texture2D" uid="uid://dsny18fhod4wp" path="res://kamart/Rat_v1/Sprite Sheet/Rat_v1_Sheet_NoEffect.png" id="2_j003u"]
[ext_resource type="AudioStream" uid="uid://dejd4pnveknnm" path="res://kamart/Sounds/536753__egomassive__rat.ogg" id="3_af5da"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t427d"]
size = Vector2(40, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_q141p"]
atlas = ExtResource("2_j003u")
region = Rect2(186, 220, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_us8ai"]
atlas = ExtResource("2_j003u")
region = Rect2(248, 220, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dqdd"]
atlas = ExtResource("2_j003u")
region = Rect2(310, 220, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsfvu"]
atlas = ExtResource("2_j003u")
region = Rect2(372, 220, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ifmj"]
atlas = ExtResource("2_j003u")
region = Rect2(434, 220, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_smhac"]
atlas = ExtResource("2_j003u")
region = Rect2(496, 220, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrb67"]
atlas = ExtResource("2_j003u")
region = Rect2(0, 264, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ljeo"]
atlas = ExtResource("2_j003u")
region = Rect2(62, 264, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_iiogq"]
atlas = ExtResource("2_j003u")
region = Rect2(124, 264, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpodd"]
atlas = ExtResource("2_j003u")
region = Rect2(186, 264, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_h674t"]
atlas = ExtResource("2_j003u")
region = Rect2(248, 264, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wd51"]
atlas = ExtResource("2_j003u")
region = Rect2(310, 264, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_62hhf"]
atlas = ExtResource("2_j003u")
region = Rect2(372, 264, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yrm8"]
atlas = ExtResource("2_j003u")
region = Rect2(434, 264, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxiaj"]
atlas = ExtResource("2_j003u")
region = Rect2(496, 264, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_p35k0"]
atlas = ExtResource("2_j003u")
region = Rect2(0, 308, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w3sp"]
atlas = ExtResource("2_j003u")
region = Rect2(62, 308, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_wse1y"]
atlas = ExtResource("2_j003u")
region = Rect2(124, 308, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_micvp"]
atlas = ExtResource("2_j003u")
region = Rect2(434, 44, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj2oe"]
atlas = ExtResource("2_j003u")
region = Rect2(496, 44, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp28w"]
atlas = ExtResource("2_j003u")
region = Rect2(0, 88, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm23a"]
atlas = ExtResource("2_j003u")
region = Rect2(62, 88, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pebc"]
atlas = ExtResource("2_j003u")
region = Rect2(124, 88, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq2vw"]
atlas = ExtResource("2_j003u")
region = Rect2(186, 88, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_47trc"]
atlas = ExtResource("2_j003u")
region = Rect2(248, 88, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohy17"]
atlas = ExtResource("2_j003u")
region = Rect2(310, 88, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkquw"]
atlas = ExtResource("2_j003u")
region = Rect2(310, 132, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5pov"]
atlas = ExtResource("2_j003u")
region = Rect2(372, 132, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwyya"]
atlas = ExtResource("2_j003u")
region = Rect2(434, 132, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vnsr"]
atlas = ExtResource("2_j003u")
region = Rect2(496, 132, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfj6l"]
atlas = ExtResource("2_j003u")
region = Rect2(0, 176, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv4w6"]
atlas = ExtResource("2_j003u")
region = Rect2(62, 176, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_j854h"]
atlas = ExtResource("2_j003u")
region = Rect2(124, 176, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq2t6"]
atlas = ExtResource("2_j003u")
region = Rect2(496, 0, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1ujf"]
atlas = ExtResource("2_j003u")
region = Rect2(0, 44, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_54qqf"]
atlas = ExtResource("2_j003u")
region = Rect2(62, 44, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xtem"]
atlas = ExtResource("2_j003u")
region = Rect2(124, 44, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_xr531"]
atlas = ExtResource("2_j003u")
region = Rect2(186, 44, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xp6q"]
atlas = ExtResource("2_j003u")
region = Rect2(248, 44, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfoyh"]
atlas = ExtResource("2_j003u")
region = Rect2(310, 44, 62, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_by2md"]
atlas = ExtResource("2_j003u")
region = Rect2(372, 44, 62, 44)

[sub_resource type="SpriteFrames" id="SpriteFrames_kd1bt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q141p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_us8ai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dqdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsfvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ifmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smhac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrb67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ljeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiogq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpodd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h674t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wd51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62hhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yrm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxiaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p35k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w3sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wse1y")
}],
"loop": false,
"name": &"Death",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_micvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj2oe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp28w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm23a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pebc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq2vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47trc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohy17")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkquw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5pov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwyya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vnsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfj6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv4w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j854h")
}],
"loop": false,
"name": &"Stop",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq2t6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1ujf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54qqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xtem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xr531")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xp6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfoyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by2md")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[node name="EnemyBasic" type="Area2D"]
collision_layer = 3
collision_mask = 2
script = ExtResource("1_uycs0")
knockback = 600.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t427d")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -12)
sprite_frames = SubResource("SpriteFrames_kd1bt")
animation = &"Death"
autoplay = "Walk"

[node name="FrontDetect" type="RayCast2D" parent="."]
target_position = Vector2(512, 0)
collision_mask = 4

[node name="BackDetect" type="RayCast2D" parent="."]
target_position = Vector2(-256, 0)
collision_mask = 4

[node name="Floor" type="RayCast2D" parent="."]
position = Vector2(-20, 5)
target_position = Vector2(0, 20)

[node name="Aggression" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_af5da")
volume_db = -15.0
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Aggression" to="." method="_on_aggression_timeout"]
